--- a/assets/css/estiloDesafio.css
+++ b/assets/css/estiloDesafio.css
@@ -29,35 +29,48 @@ main {
     padding: 0 6rem 15rem 6rem;
 }
 
-
-.conteudo {
-    max-width: 1366px;
-    margin: 0 auto;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 100%;
-    padding: 2rem 10rem;
-    align-items: center;
-    background: rgba(244, 155, 140, 0.8);
-}
-
-
-
-.footer li {
-    display: flex;
-    list-style: none;
-    padding: 0.8rem;
-    align-items: center;
-    gap: 1rem;
-}
-
 .topo-logo img {
     width: 25rem;
     height: 25rem;
+}
+
+.pesquisa{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2rem;
+    background: #fff;
+    border:solid 1px rgba(141,141,141, 0.6);
+    border-radius:2.5rem;
+    box-shadow: 0rem 0.5rem 1rem rgba(141,141,141, 0.8);
+    height: 5rem;
+}
+
+.texto-pesquisa {
+    background:transparent;
+    font-size:2.6rem;
+    border: 0 none;
+    outline: 0;
+}
+
+.paragrafo-catalogo {
+    color: #8b8989;
+}
+
+.botao-pesquisa {
+    cursor: pointer;
+    background: none;
+    border: none;
+}
+
+.botao-pesquisa img {
+    width: 3rem;
+    height: 3rem;
+}
+
+.conteudo-chave-produtos {
+    max-width: 1366px;
+    margin: 0 auto;
 }
 
 .grid {
@@ -66,9 +79,8 @@ main {
     grid-template-columns: 2fr 1fr 2fr 1fr;
     grid-template-rows: repeat(auto-fill, 1fr);
     justify-content: center;
-    
     padding: 0 10rem 10rem 10rem;
-    gap: 3rem;
+    gap: 5rem 3rem;
     grid-template-areas: 
         'cabeca cabeca cabeca cabeca'
         'peca2 peca3 peca5 peca4'
@@ -80,7 +92,7 @@ main {
     display: flex;
     background: #fff;
     justify-content: center;
-    padding: 2rem;
+    padding: 4rem;
     box-shadow: 0rem 0.5rem 1rem grey;
     border-radius: 2.5rem;
 }
@@ -129,40 +141,28 @@ main {
     gap: 1rem
 }
 
+.footer {
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+    height: 100%;
+    padding: 2rem 10rem;
+    align-items: center;
+    text-align: center;
+    background: rgba(244, 155, 140, 0.8);
+}
+
+.footer li {
+    display: flex;
+    list-style: none;
+    padding: 0.8rem;
+    align-items: center;
+    gap: 1rem;
+}
+
 .baixo-logo img {
     width: 15rem;
     height: 15rem;
-}
-
-.pesquisa{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 2rem;
-    background: #fff;
-    border:solid 1px rgba(141,141,141, 0.6);
-    border-radius:2.5rem;
-    box-shadow: 0rem 0.3rem 1rem rgba(141,141,141, 0.5);
-    height: 5rem;
-}
-  
-.texto-pesquisa {
-    background:transparent;
-    font-size:2.6rem;
-    border: 0 none;
-    outline: 0;
-    
-}
-
-.botao-pesquisa {
-    cursor: pointer;
-    background: none;
-    border: none;
-}
-
-.botao-pesquisa img {
-    width: 3rem;
-    height: 3rem;
 }
 
 @media screen and (max-width: 1200px){
@@ -171,7 +171,9 @@ main {
     }
 
     .grid {
-        gap: 7rem 4rem ;
+        gap: 7rem 4rem;
+        padding: 0 5rem 8rem 5rem;
+        grid-template-columns: 1.8fr 1fr 1.8fr 1fr;
     }
 }
 
@@ -181,7 +183,8 @@ main {
     }
 
     .grid {
-        gap: 7rem 4rem ;
+        gap: 7rem 3.5rem;
+        grid-template-columns: 1.7fr 1fr 1.7fr 1fr;
     }
 }
 
@@ -191,21 +194,21 @@ main {
     }
 
     .grid {
-        gap: 7rem 4rem ;
-        padding: 0 5rem 5rem 5rem;
+        grid-template-columns: 1.8fr 1.2fr 1.8fr 1.2fr;
+        gap: 10rem 3rem ;
+        padding: 0 5rem 8rem 5rem;
     }
 }
 
-@media screen and (max-width: 683px){
+@media screen and (max-width: 650px){
     html {
         font-size: 37.5%;
     }
 
     .grid {
-        display: grid;
         background: white;
         grid-template-columns: 1fr 0.5fr 1fr;
-        grid-template-rows: auto;
+        grid-template-rows: repeat(auto-fill, 1fr);
         justify-content: center;     
         gap: 7rem 4rem ;
         grid-template-areas: 
@@ -243,7 +246,7 @@ main {
     .pesquisa:hover {
         display: flex;
         flex-direction: column;
-        width: 100vw;
+        width: 40vw;
         height: 6rem;
         border-radius:3.5rem;
     }
@@ -265,12 +268,39 @@ main {
 
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 480px) {
     html {
         font-size: 35%;
     }
     
     .grid {
-        padding: 0 5rem 5rem 5rem;
+        padding: 0 5rem 10rem 5rem;
+        grid-template-columns: 1fr 0.3fr 1fr;
     }
 }
+
+@media screen and (max-width: 320px) {
+    html {
+        font-size: 35%;
+    }
+
+    .grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(auto-fill, 1fr);
+        justify-content: center;     
+        gap: 7rem 4rem ;
+        padding: 0 3rem 8rem 3rem;
+        grid-template-areas: 
+            'cabeca cabeca'
+            'peca2 peca2'
+            'peca3 peca6'
+            'peca5 peca5'
+            'peca4 peca7'
+        ;
+
+    }
+}
+
+/*320px
+1024px
+1200px*/
