--- a/assets/css/estiloDesafio.css
+++ b/assets/css/estiloDesafio.css
@@ -5,16 +5,20 @@
 }
 
 html {
-        font-size: 62.5%;
-        font-family: 'Montserrat', sans-serif;
+    font-size: 62.5%;
+    font-family: 'Montserrat', sans-serif;
+    height: 100%;
 }
 
 body {
     font-size: 2rem;
+    height: 100%;
 }
 
 main {
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
 }
 
@@ -69,16 +73,17 @@ main {
 }
 
 .conteudo-chave-produtos {
-    max-width: 1366px;
+
     margin: 0 auto;
 }
 
 .grid {
     display: grid;
     background: white;
-    grid-template-columns: 2fr 1fr 2fr 1fr;
+    grid-template-columns: auto;
     grid-template-rows: repeat(auto-fill, 1fr);
     justify-content: center;
+    height: 100%;
     padding: 0 10rem 10rem 10rem;
     gap: 5rem 3rem;
     grid-template-areas: 
@@ -92,7 +97,7 @@ main {
     display: flex;
     background: #fff;
     justify-content: center;
-    padding: 4rem;
+    padding: 3rem;
     box-shadow: 0rem 0.5rem 1rem grey;
     border-radius: 2.5rem;
 }
@@ -105,7 +110,7 @@ main {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: right;
-    height: 15vh;
+    height: 15rem;
 }
 
 .grid div:nth-child(2) {
@@ -145,7 +150,7 @@ main {
     display: flex;
     justify-content: space-between;
     width: 100vw;
-    height: 100%;
+    bottom: 0;
     padding: 2rem 10rem;
     align-items: center;
     text-align: center;
@@ -160,6 +165,10 @@ main {
     gap: 1rem;
 }
 
+.hearth {
+    color: red;
+}
+
 .baixo-logo img {
     width: 15rem;
     height: 15rem;
@@ -171,9 +180,7 @@ main {
     }
 
     .grid {
-        gap: 7rem 4rem;
-        padding: 0 5rem 8rem 5rem;
-        grid-template-columns: 1.8fr 1fr 1.8fr 1fr;
+        padding: 0 4rem 8rem 4rem;
     }
 }
 
@@ -181,23 +188,17 @@ main {
     html {
         font-size: 50%;
     }
-
-    .grid {
-        gap: 7rem 3.5rem;
-        grid-template-columns: 1.7fr 1fr 1.7fr 1fr;
-    }
 }
 
 @media screen and (max-width: 768px){
     html {
         font-size: 43.75%;
     }
-
     .grid {
-        grid-template-columns: 1.8fr 1.2fr 1.8fr 1.2fr;
-        gap: 10rem 3rem ;
-        padding: 0 5rem 8rem 5rem;
+        gap: 7rem 2rem;
+        grid-template-columns: 1fr 0.75fr 1fr 0.75fr;
     }
+
 }
 
 @media screen and (max-width: 650px){
@@ -207,7 +208,7 @@ main {
 
     .grid {
         background: white;
-        grid-template-columns: 1fr 0.5fr 1fr;
+        grid-template-columns: auto;
         grid-template-rows: repeat(auto-fill, 1fr);
         justify-content: center;     
         gap: 7rem 4rem ;
@@ -278,9 +279,10 @@ main {
         justify-content: flex-end;
         padding: 2rem;
     }
+
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 321px) {
     html {
         font-size: 35%;
     }
