--- a/assets/css/testegridarea.css
+++ b/assets/css/testegridarea.css
@@ -28,9 +28,46 @@ main {
     align-items: center;
     background: linear-gradient(180deg, #FF99C4, rgba(255, 255, 255, 0.3) 100%);
     width: 100vw;
-    height: 35rem;
-    align-items: top;
+    height: 40rem;
     padding: 0 6rem 15rem 6rem;
+}
+
+.botoes-cores {
+    display: flex;
+    width: 35vw;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    gap: 3rem;
+}
+
+.botoes-cores button {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+    border: none ;
+    border-radius: 2.4rem;
+    height: 4.3rem;
+    width: 15rem;
+}
+
+.botoes-cores img {
+    position: absolute;
+    bottom: 20%;
+    width: 7.4rem;
+    height: 7.4rem;
+}
+
+.botoes-cores .orange {
+    background: #F05E2B;
+}
+
+.botoes-cores .blue {
+    background: #516FFB;
+}
+
+.botoes-cores .pink {
+    background: #ED5885;
 }
 
 .topo-logo img {
@@ -48,6 +85,7 @@ main {
     border-radius:2.5rem;
     box-shadow: 0rem 0.5rem 1rem rgba(141,141,141, 0.8);
     height: 5rem;
+    width: 40rem;
 }
 
 .texto-pesquisa {
@@ -176,7 +214,7 @@ main {
 
 @media screen and (max-width: 1200px){
     html {
-        font-size: 56.25%;
+        font-size: 50.25%;
     }
 
     .grid {
@@ -186,24 +224,51 @@ main {
 
 @media screen and (max-width: 900px){
     html {
-        font-size: 50%;
+        font-size: 43.75%;
     }
 }
 
 @media screen and (max-width: 768px){
     html {
-        font-size: 43.75%;
+        font-size: 40.5%;
     }
     .grid {
         gap: 7rem 2rem;
         grid-template-columns: 1fr 0.75fr 1fr 0.75fr;
     }
 
+    .botoes-cores button {
+        border-radius: 2.4rem;
+        height: 3.8rem;
+        width: 11rem;
+    }
 }
 
 @media screen and (max-width: 650px){
     html {
         font-size: 37.5%;
+    }
+
+    .cabecalho :nth-child(1){
+        grid-area: logo;
+    }
+    .cabecalho :nth-child(2){
+        grid-area: cores;
+    }
+    .cabecalho :nth-child(3){
+        grid-area: pesquisa;
+    }
+
+    .cabecalho {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        align-items: center;
+        padding: 0 3rem 1rem 3rem;
+        grid-template-areas: 
+            'logo logo cores'
+            'pesquisa pesquisa pesquisa'        
+        ;
     }
 
     .grid {
@@ -221,15 +286,19 @@ main {
         ;
     }
 
-    /*.footer {
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto;
-        justify-content: center;
-        text-align: center;
-        gap: 3rem;
-    }*/
+    .pesquisa {
+        height: 7rem;
+    }
 
+    .botoes-cores {
+        align-items: center;
+    }
+
+    .botoes-cores button {
+        border-radius: 50%;
+        height: 7rem;
+        width: 7rem;
+    }
 
     .footer {
         display: flex;
@@ -244,7 +313,6 @@ main {
     .footer .baixo-logo {
         display: none;
     }
-
 }
 
 @media screen and (max-width: 480px) {
@@ -262,11 +330,11 @@ main {
     }
 
     .pesquisa {  
-        padding: 0;
+        padding: 2rem;
         justify-content: center;
         align-items: center;   
-        height: 6rem;
-        width: 6rem;
+        height: 7rem;
+        width: 7rem;
         border-radius:50%;
         
     }
@@ -274,7 +342,7 @@ main {
     .pesquisa:hover {
         display: flex;
         width: 40vw;
-        height: 6rem;
+        height: 7rem;
         border-radius:3.5rem;
         justify-content: flex-end;
         padding: 2rem;
@@ -283,16 +351,40 @@ main {
 }
 
 @media screen and (max-width: 321px) {
-    html {
-        font-size: 35%;
-    }
-
-    .cabecalho {
+    /*.cabecalho {
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding: 0 6rem 10rem 6rem;
+        gap: 2rem;
         height: 50rem;
+    }*/
+    
+    .cabecalho {
+        justify-items: center;
+        grid-template-areas: 
+        'logo logo logo'
+        'pesquisa pesquisa cores' 
+        ;
+    }
+
+    .botao-cores {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .botoes-cores button {
+        width: 0;
+        height: 0;
+    }
+
+    .pesquisa {
+        justify-self: start;
+    }
+
+    .botoes-cores img {
+        position: static;
+        align-self: center;
     }
 
     .grid {
